--- a/DrawCard/index.html
+++ b/DrawCard/index.html
@@ -14,8 +14,11 @@
             Draw
         </button>
     </div>
-    <div class="cardView" >
+    
+    <div class="container" id="cardView" >
+       <div class="row my-3 g-2"  id="cardRow">
 
+       </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
